  * rubilicious.rb: updated copyright
  * README: same
  * COPYING: same
  * rubilicious.rb: preliminary delicious SSL api support

* Mon Aug 14 02:43:12 2006, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: bump version to 0.2.0
  * rubilicious.rb: same

* Thu Aug 31 16:22:02 2006, pabs <pabs@pablotron.org>
  * rubilicious.rb: 

* Thu Aug 31 17:06:06 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: removed Time, String, and Array additions.  I've 
    added the last two back as Rubilicious::StringExtras and
    Rubilicious::ArrayExtras respectively, but I need to do a bit of
    tweaking to ensure backwards compatability.
  * rubilicious.rb: switched from String#uri_escape and String#xml_escape
    to Rubilicios#u and Rubilicious#h, respectively   
  * rubilicious.rb: use built-in Time.iso8601 calls


* Fri Sep  1 00:23:06 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: slightly cleaner private/public
  * rubilicious.rb: add replace and is_private support to
    Rubilicious#add
  * rubilicious.rb: fix Rubilicious#h so it actually does something
  * rubilicious.rb: convert timestamps to GMT first (the delicious API
    only supports ISO-8601 timestamps in GMT)

* Fri Sep  1 00:35:55 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * README: added Installation section (just covers rubygems at the
    moment, but I should have a note about the debian package, too)
  * rubilicious.rb: update version to 0.2.0
  * examples/add_link.rb: exit without proper cli args
  * examples/del_to_xbel.rb: use Rubilicious.to_xbel() instead of
    old Array#to_xbel

* Fri Sep  1 01:17:58 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: added Rubilicious::NoSSLError
  * rubilicious.rb: added documentation for error classes
  * rubilicious.rb: added documentation for Rubilicious::Extras
  * rubilicious.rb: renamed set_http_ssl_attrs to init_http_ssl
  * rubilicious.rb: misc documentation corrections